terraform/dev-ecs/ecs-sg.tf
resource "aws_security_group" "sg" {
  name   = "ecs-sg"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    self        = "false"
    cidr_blocks = ["0.0.0.0/0"]
    description = "http"
  }

  egress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
